# lynx-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  migrate_config.sh
.github/workflows/: release.yml
homebrew/: cli-lynx-fm.rb
scripts/: release.sh
src/: auth.rs  commands.rs  config.rs  lib.rs  main.rs  music.rs
tests/: README.md  jwt_validation_tests.rs  lynx_fm_tests.rs
