[package]
name = "cli-lynx-fm"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for Lynx.fm music streaming service"
readme = "README.md"
homepage = "https://github.com/dylantarre/lynx-cli"
repository = "https://github.com/dylantarre/lynx-cli"
license = "MIT"
keywords = ["music", "streaming", "cli", "lynx", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
futures-util = "0.3"
dotenv = "0.15"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.0"
rodio = "0.17"

[dev-dependencies]
tempfile = "3.8"
jsonwebtoken = "9.2.0"

[lib]
name = "lynx_fm"
path = "src/lib.rs"

[[bin]]
name = "lynx-fm"
path = "src/main.rs"

[[test]]
name = "lynx_fm_tests"
path = "tests/lynx_fm_tests.rs"
